--- a/styles/scss/Home.module.scss
+++ b/styles/scss/Home.module.scss
@@ -6,6 +6,35 @@
     background-attachment: fixed;
     height: 90vh;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 1em;
+    filter: brightness(100%) saturate(100%);
+    transition: filter 0.5s;
+
+    &:hover {
+        filter: brightness(70%) saturate(70%);
+        button {
+            display: block;
+        }
+        transition: filter 0.5s;
+    }
+
+    button {
+        padding: 1em;
+        border: 2px black solid;
+        background-color: #b8c6db;
+        background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+        filter: brightness(70%) saturate(70%);
+        border-radius: 30px;
+        cursor: pointer;
+        display: none;
+
+        &:hover {
+            filter: brightness(80%);
+        }
+    }
 }
 
 .navbar {
@@ -33,10 +62,15 @@
         font-family: sans-serif;
         cursor: pointer;
         margin-top: calc(15vh - 2em);
+        background-color: #b8c6db;
+        background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+        box-shadow: none;
+        transition: box-shadow 0.5s;
 
         &:hover {
             box-shadow: inset 0.1em 0.1em 15px rgb(100, 100, 100), 
                         inset -0.1em -0.1em 15px rgb(100, 100, 100);
+            transition: box-shadow 0.5s;
         }
     }
 
@@ -51,102 +85,4 @@
 .sec_content {
     position: relative;
     top: 20px;
-}
-
-.about_me {
-    position: relative;
-    margin: auto;   
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 70%;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: center;
-    height: 350px;
-    bottom: 10px;
-    border: 5px black solid;
-    border-radius: 25px;  
-    box-shadow: 10px 10px 20px black;
-
-    figure figcaption {
-        text-align: center;
-        font-weight: 500;
-        font-size: 1.5em;
-        width: 100%;
-    }
-}
-
-.item_am_2_image {
-    border-radius: 50%;
-}
-
-.item_am_2 {
-    font-weight: 600;
-    font-size: 1.2em;
-    width: 60%;
-}
-
-.spec_flex {
-    display: inline-flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    font-size: 1.2em;
-    justify-content: center;
-    margin-top: 20px;
-    gap: 10rem;
-
-    p {
-        font-size: 1.1em;
-        font-weight: 500;
-        width: 35%;
-    }
-
-    .tech_logos {
-        display: grid;
-        grid-column-start: auto;
-        grid-column-end: auto;
-        grid-row-start: 1;
-        grid-row-end: 2;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 1.5em;
-        // cursor: help;
-    }
-}
-
-.all_tech {
-    margin-left: calc(50vw - 15px);
-
-    button {
-        border: none;
-        background-color: white;
-        cursor: pointer;
-    }
-}
-
-.list_all_tech {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    border-top: 1.5px rgb(170, 170, 170) solid; 
-    border-bottom: 1.5px rgb(170, 170, 170) solid; 
-    background-color: rgb(240, 240, 240);
-    cursor: default;
-    ul {
-        list-style: none;
-    }
-
-    h3 {
-        margin: 0;
-    }
-
-    li {
-        text-indent: 10px;
-    }
-
-    li:hover {
-        transform: scale(1.15);
-        transition: transform 0.25s;
-    }
 }
