--- a/styles/scss/Aboutme.module.scss
+++ b/styles/scss/Aboutme.module.scss
@@ -10,10 +10,14 @@
     justify-content: center;
     height: 350px;
     bottom: 10px;
-    // border: 5px black solid;
-    // border-radius: 25px;  
     box-shadow: 10px 10px 20px rgb(200, 200, 200);
     gap: 20px;
+    background-color: #007ea7;
+    background-image: linear-gradient(315deg, #007ea7 0%, #80ced7 74%);
+    background-color: #89d4cf;
+    background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
+    background-color: #5ca0f2;
+    background-image: linear-gradient(315deg, #5ca0f2 0%, #f5f7f6 74%);     
 
     figure figcaption {
         text-align: center;
