--- a/styles/scss/Home.module.scss
+++ b/styles/scss/Home.module.scss
@@ -24,15 +24,17 @@
     button {
         padding: 1em;
         border: 2px black solid;
-        background-color: #b8c6db;
-        background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
-        filter: brightness(70%) saturate(70%);
+        background-color: #fde7f9;
+        background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
+        filter: brightness(100%) saturate(100%) !important;
         border-radius: 30px;
         cursor: pointer;
         display: none;
 
         &:hover {
-            filter: brightness(80%);
+            box-shadow: inset -5rem 0px #fee2f8,
+                        inset 5rem 0px #fee2f8;
+            transition: box-shadow 0.5s;
         }
     }
 }
@@ -62,14 +64,17 @@
         font-family: sans-serif;
         cursor: pointer;
         margin-top: calc(15vh - 2em);
-        background-color: #b8c6db;
-        background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+        // background-color: #b8c6db;
+        // background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+        background-color: #e3efe8;
+        background-image: linear-gradient(315deg, #e3efe8 0%, #96a7cf 74%);
+
         box-shadow: none;
         transition: box-shadow 0.5s;
 
         &:hover {
-            box-shadow: inset 0.1em 0.1em 15px rgb(100, 100, 100), 
-                        inset -0.1em -0.1em 15px rgb(100, 100, 100);
+            box-shadow: inset -45px 0px #ffffff,
+                        inset 45px 0px #ffffff;
             transition: box-shadow 0.5s;
         }
     }
@@ -84,5 +89,5 @@
 
 .sec_content {
     position: relative;
-    top: 20px;
+    top: 20px;  
 }
