--- a/styles/scss/Aboutme.module.scss
+++ b/styles/scss/Aboutme.module.scss
@@ -12,27 +12,42 @@
     bottom: 10px;
     box-shadow: 10px 10px 20px rgb(200, 200, 200);
     gap: 20px;
-    background-color: #007ea7;
-    background-image: linear-gradient(315deg, #007ea7 0%, #80ced7 74%);
-    background-color: #89d4cf;
-    background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
     background-color: #5ca0f2;
     background-image: linear-gradient(315deg, #5ca0f2 0%, #f5f7f6 74%);     
+
+    @keyframes per-lett{ 
+        from { width: 0;} 
+      } 
 
     figure figcaption {
         text-align: center;
         font-weight: 500;
+        overflow: hidden;
         font-size: 1.5em;
+        white-space: nowrap;
         width: 100%;
+        animation: per-lett 1.5s steps(60, start); 
     }
 }
 
-.item_am_2_image {
+@keyframes sc-rot {
+    0% { transform: scale(0) rotate(0); border: none}
+    100% { transform: scale(1) rotate(720deg)}
+}
+
+.item_am_1_image {
     border-radius: 50%;
+    animation: sc-rot 2s;
+}
+
+@keyframes text-opac {
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
 
 .item_am_2 {
     font-weight: 600;
     font-size: 1.2em;
     width: 60%;
+    animation: text-opac 3.5s;
 }
