--- a/styles/scss/Aboutme.module.scss
+++ b/styles/scss/Aboutme.module.scss
@@ -1,4 +1,5 @@
 .about_me {
+    visibility: visible;
     position: relative;
     margin: auto;   
     margin-top: 50px;
@@ -19,7 +20,7 @@
         from { width: 0;} 
       } 
 
-    figure figcaption {
+    .item_am_1_fig {
         text-align: center;
         font-weight: 500;
         overflow: hidden;
@@ -50,4 +51,49 @@
     font-size: 1.2em;
     width: 60%;
     animation: text-opac 3.5s;
+}
+
+.vis_none{
+    visibility: hidden;
+}
+
+//Phone Portrait
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .about_me {
+        width: 100vmax;
+    }
+    .item_am_2 {
+        overflow-y: auto;
+        height: 70%;
+    }
+}
+
+//Phone Landscape
+@media screen and (max-width: 480px) {
+  
+}
+
+//Tablet Portrait & Landscape
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  
+}
+
+//Tablet Portrait
+@media screen and (min-width: 768px) {
+  
+}
+
+//Tablet Landscape
+@media screen and (max-width: 1024px) {
+  
+}
+
+//Desktop
+@media screen and (min-width: 1224px) {
+  
+}
+
+//Large Desktop
+@media screen and (min-width: 1824px) {
+  
 }
