--- a/styles/scss/Techinfo.module.scss
+++ b/styles/scss/Techinfo.module.scss
@@ -1,4 +1,5 @@
 .spec_flex {
+    visibility: visible;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -18,7 +19,7 @@
         to { opacity: 1 }
     }
 
-    p {
+    .text_tech {
         font-size: 1.1em;
         font-weight: 500;
         width: 35%;
@@ -227,4 +228,65 @@
         from { opacity: 0; transform: scale(1.25); }
         to { opacity: 1; tranform: scale(1); }
     }
+}
+
+.vis_none {
+    visibility: hidden;
+}
+
+//Phone Portrait
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .spec_flex {
+         width: 100vmax;
+         height: 350px;
+         gap: 5rem;
+         .text_tech {
+             overflow-y: auto;
+             height: 70%;
+             width: 50%;
+         }
+        .tech_logos {
+            grid-row-end: 3;
+            grid-template-columns: repeat(2, minmax(0, .1fr));
+            grid-template-rows: repeat(3, .1fr);
+            column-gap: 100px;
+            margin-left: -3em;
+        }
+    }
+    .all_tech {
+    margin-left: calc(50vmax - 15px);
+    }
+    .list_all_tech {
+        width: 100vmax;
+    }
+}
+
+//Phone Landscape
+@media screen and (max-width: 480px) {
+  
+}
+
+//Tablet Portrait & Landscape
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  
+}
+
+//Tablet Portrait
+@media screen and (min-width: 768px) {
+  
+}
+
+//Tablet Landscape
+@media screen and (max-width: 1024px) {
+  
+}
+
+//Desktop
+@media screen and (min-width: 1224px) {
+  
+}
+
+//Large Desktop
+@media screen and (min-width: 1824px) {
+  
 }
