--- a/styles/scss/Home.module.scss
+++ b/styles/scss/Home.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika&display=swap');
+
 .image {
     position: relative;
     background: url('https://res.cloudinary.com/media-cloud-dw/image/upload/v1638560298/Portfolio-Website/MainParallaxBackgroundLower_qhxg10.png') no-repeat;
@@ -26,6 +28,7 @@
         border: 2px black solid;
         background-color: #fde7f9;
         background-image: linear-gradient(315deg, #fde7f9 0%, #aacaef 74%);
+        font-family: 'Signika', sans-serif;
         filter: brightness(100%) saturate(100%) !important;
         border-radius: 30px;
         cursor: pointer;
@@ -65,6 +68,7 @@
         font-family: sans-serif;
         cursor: pointer;
         margin-top: calc(15vh - 2em);
+        font-family: 'Signika', sans-serif;
         background-color: #e3efe8;
         background-image: linear-gradient(315deg, #e3efe8 0%, #96a7cf 74%);
 
